k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextjs
  template:
    metadata:
      labels:
        app: nextjs
    spec:
      containers:
        - name: nextjs
          image: gittu1912/nextjs-blog:latest
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: dockerhub-secret
